feat: add function workflow to tutorial
This commit adds a functions section to the tutorial. It walks the user
through creating, building, deploying and invoking a function.

Fixes: https://github.com/knative/docs/issues/5205

Signed-off-by: Lance Ball <lball@redhat.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -22,6 +22,12 @@ nav:
     - Tutorial:
         - Tutorial introduction: getting-started/README.md
         - Install Knative using quickstart: getting-started/quickstart-install.md
+        - Using Knative Functions:
+          - Creating a Knative Function: getting-started/creating-function.md
+          - Building a Function: getting-started/build-function.md
+          - Deploying a Function: getting-started/deploy-function.md
+          - Invoking a Function: getting-started/invoking-function.md
+          - Using Triggers and Event Sources: getting-started/function-triggers.md
         - Using Knative Serving:
           - Deploying a Knative Service: getting-started/first-service.md
           - Autoscaling: getting-started/first-autoscale.md
