fixup: modify nav and add install
Signed-off-by: Lance Ball <lball@redhat.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -22,12 +22,6 @@ nav:
     - Tutorial:
         - Tutorial introduction: getting-started/README.md
         - Install Knative using quickstart: getting-started/quickstart-install.md
-        - Using Knative Functions:
-          - Creating a Knative Function: getting-started/creating-function.md
-          - Building a Function: getting-started/build-function.md
-          - Deploying a Function: getting-started/deploy-function.md
-          - Invoking a Function: getting-started/invoking-function.md
-          - Using Triggers and Event Sources: getting-started/function-triggers.md
         - Using Knative Serving:
           - Deploying a Knative Service: getting-started/first-service.md
           - Autoscaling: getting-started/first-autoscale.md
@@ -37,6 +31,12 @@ nav:
           - Sources, Brokers, and Triggers: getting-started/first-broker.md
           - Using a Knative Service as a source: getting-started/first-source.md
           - Using Triggers and sinks: getting-started/first-trigger.md
+        - Using Knative Functions:
+          - Creating a Knative Function: getting-started/creating-function.md
+          - Building a Function: getting-started/build-function.md
+          - Deploying a Function: getting-started/deploy-function.md
+          - Invoking a Function: getting-started/invoking-function.md
+          - Using Knative Eventing with a Function: getting-started/function-triggers.md
         - What's Next?: getting-started/next-steps.md
         - Clean Up: getting-started/clean-up.md
 ###############################################################################
@@ -45,6 +45,7 @@ nav:
     - Installing:
       - About installing Knative: install/README.md
       - Install the Knative CLI: client/install-kn.md
+      - Install the Knative Functions CLI: client/install-func.md
       - Install Knative using quickstart: install/quickstart-install.md
       # YAML Installation
       - Install Knative with YAML:
