alignd to comments

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -140,7 +140,10 @@ nav:
       # Serving - Application Security
       - Application security:
         - About Security-Guard: serving/app-security/security-guard-about.md
-        - Security-guard quickstart: serving/app-security/security-guard-quickstart.md
+        - Installing Security-Guard: serving/app-security/security-guard-install.md
+        - Security-guard quickstart: serving/app-security/security-guard-example-alerts.md
+        - Security-Guard example alerts: serving/app-security/security-guard-about.md
+        - Using Security-Guard: serving/app-security/security-guard-using.md
       # Serving - observability
       - Observability:
         - Collecting logs: serving/observability/logging/collecting-logs.md
