--- a/config/nav.yml
+++ b/config/nav.yml
@@ -263,7 +263,7 @@ nav:
     - Functions:
       - About Knative Functions: functions/README.md
       - Function Runtimes: functions/runtimes.md
-      - Local Development and Testing: functions/local-development.md
+      - Local Development: functions/local-development.md
 ###############################################################################
     # CLI
 ###############################################################################
