--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -1,9 +1,12 @@
 nav:
     - Home: /docs/
     - Tutorial: /docs/getting-started/
+    - Concepts: /docs/concepts/
     - Installing: /docs/install/
+    - Functions: /docs/functions/
     - Serving: /docs/serving/
     - Eventing: /docs/eventing/
+    - Knative CLI: /docs/client/
     - Code samples: /docs/samples/
     - Reference: /docs/reference/
     - Community: /docs/community/
