--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -17,6 +17,7 @@ nav:
     - Blog:
       - index.md
       - Releases:
+          - releases/announcing-knative-v1-8-release.md
           - releases/announcing-knative-v1-7-release.md
           - releases/announcing-knative-v1-6-release.md
           - releases/announcing-knative-v1-5-release.md
