add virtual office hour blog to nav

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -72,6 +72,7 @@ nav:
           - steering/2020-01-annual-report-2019.md
           - steering/2019-12-updates.md
       - Events:
+          - events/virtual-office-hour-12-2022.md
           - events/knative-at-kubecon-na-2022.md
           - events/google-summer-of-code-2022.md
           - events/install-fest-04-2022.md
