--- a/config/redirects.yml
+++ b/config/redirects.yml
@@ -14,9 +14,10 @@ plugins:
       reference/client/README.md: client/README.md
       reference/api/eventing-api.md: eventing/reference/eventing-api.md
       reference/api/serving-api.md: serving/reference/serving-api.md
-      community/contributing.md: contributing/contributing.md
-      community/about.md: contributing/about.md
-      community/README.md: contributing/README.md
+      community/about.md: community/governance.md
+      contributing/contributing.md: community/contributing.md
+      contributing/about.md: community/governance.md
+      contributing/README.md: community/README.md
       eventing/getting-started.md: getting-started/getting-started-eventing.md
       admin/collecting-logs/README.md: serving/observability/logging/collecting-logs.md
       admin/collecting-metrics/README.md: serving/observability/metrics/collecting-metrics.md
