removes maven-wrapper.jar from repository
Signed-off-by: Paul S. Schweigert <paul@paulschweigert.com>

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,8 @@ blog/docs/images/case-studies/
 .project
 *.class
 
+# Don't include maven wrapper jar
+maven-wrapper.jar
+
 # Ignore Python virtual environments
 .venv
