Adding a blog post for simpler kafka development :dizzy:
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>
Co-authored-by: Christoph Stäbler <cstabler@redhat.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -43,6 +43,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/single-node-kafka-development.md
           - articles/eventing-rabbitmq-announcement.md
           - articles/performance-test-with-slos.md
           - articles/workflow-as-function-flow.md
