Revise website community content to be more beginner-friendly (#5348)
* Clean up contribution docs

* Move 'contributing' to 'community' to encourage lurkers as well as active participants. Also, increase content on 'community' landing page

* Update additional redirect

* Fix trailing newline and accidental backup file inclusion

* Address @psschwei feedback

* Fix typo in link

* fix typo

Co-authored-by: Paul Schweigert <paul@paulschweigert.com>

* Construct a grammatical sentence

Co-authored-by: Paul Schweigert <paul@paulschweigert.com>

* Address @psschwei feedback, thanks\!

Co-authored-by: Ashleigh Brennan <abrennan@redhat.com>
Co-authored-by: Paul Schweigert <paul@paulschweigert.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -293,10 +293,10 @@ nav:
     - Reference:
       - Security: reference/security/README.md
       - Release notes: reference/relnotes/README.md
-    - Contributing:
-      - Welcome to the Knative community: contributing/README.md
-      - Contribute to Knative: contributing/contributing.md
-      - About the community: contributing/about.md
+    - Community:
+      - How To Get Involved: community/README.md
+      - Contribute to Knative: community/contributing.md
+      - Community Rules and Practices: community/governance.md
     - About:
       - Testimonials: about/testimonials.md
       - Case studies:
