--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -44,6 +44,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/kafka-broker-with-isolated-data-plane.md
           - articles/single-node-kafka-development.md
           - articles/eventing-rabbitmq-announcement.md
           - articles/performance-test-with-slos.md
