Migrate from k8s.gcr.io to registry.k8s.io
Signed-off-by: Shikhar Saxena <shikhar06jan@gmail.com>

--- a/docs/serving/stackdriver/Dockerfile
+++ b/docs/serving/stackdriver/Dockerfile
@@ -1,4 +1,4 @@
-FROM k8s.gcr.io/fluentd-elasticsearch:v2.0.4
+FROM registry.k8s.io/fluentd-elasticsearch:v2.0.4
 
 RUN BUILD_DEPS="make gcc g++ libc6-dev ruby-dev libffi-dev" \
     && clean-install $BUILD_DEPS \
