--- a/docs/serving/observability/logging/fluent-bit-collector.yaml
+++ b/docs/serving/observability/logging/fluent-bit-collector.yaml
@@ -141,7 +141,7 @@ spec:
         - name: FLUENT_PORT
           value: "24224"
       - name: nginx
-        image: k8s.gcr.io/nginx-slim:0.8
+        image: registry.k8s.io/nginx-slim:0.8
         ports:
         - containerPort: 8080
           name: viewer
