Adding the Event Mesh to the Eventing nav bar, for now...
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -177,6 +177,7 @@ nav:
 ###############################################################################
     - Eventing:
       - Knative Eventing overview: eventing/README.md
+      - Event Mesh: eventing/event-mesh.md
       - Resources:
         - Brokers:
           - About Brokers: eventing/brokers/README.md
