Little more updates on Apache Kafka term usage
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -184,7 +184,7 @@ nav:
           - Broker types:
             - Available Broker types: eventing/brokers/broker-types/README.md
             # add default IMC broker page, page explaining broker types
-            - Knative Kafka Broker: eventing/brokers/broker-types/kafka-broker/README.md
+            - Apache Kafka: eventing/brokers/broker-types/kafka-broker/README.md
             - RabbitMQ Broker: eventing/brokers/broker-types/rabbitmq-broker/README.md
           - Creating a Broker: eventing/brokers/create-mtbroker.md
           - Administrator configuration options: eventing/brokers/broker-admin-config-options.md
@@ -202,7 +202,7 @@ nav:
             - About ApiServerSource: eventing/sources/apiserversource/README.md
             - Creating an ApiServerSource object: eventing/sources/apiserversource/getting-started.md
             - ApiServerSource reference: eventing/sources/apiserversource/reference.md
-          - KafkaSource: eventing/sources/kafka-source/README.md
+          - Apache Kafka Source: eventing/sources/kafka-source/README.md
           - PingSource:
             - Creating a PingSource object: eventing/sources/ping-source/README.md
             - PingSource reference: eventing/sources/ping-source/reference.md
@@ -229,7 +229,7 @@ nav:
             - ContainerSource Reference: eventing/custom-event-source/containersource/reference.md
         - Event sinks:
           - About sinks: eventing/sinks/README.md
-          - KafkaSink: eventing/sinks/kafka-sink.md
+          - Apache Kafka Sink: eventing/sinks/kafka-sink.md
         - Handling delivery failure: eventing/event-delivery.md
         - Flows:
           - About flows: eventing/flows/README.md
@@ -252,7 +252,7 @@ nav:
         # Eventing config
         - Eventing configuration:
           - Configure Channel defaults: eventing/configuration/channel-configuration.md
-          - Configure Kafka Channel defaults: eventing/configuration/kafka-channel-configuration.md
+          - Configure Apache Kafka Channel defaults: eventing/configuration/kafka-channel-configuration.md
           - Configure event source defaults: eventing/configuration/sources-configuration.md
           - Configure Sugar Controller: eventing/configuration/sugar-configuration.md
       # Eventing - observability
