--- a/config/nav.yml
+++ b/config/nav.yml
@@ -184,9 +184,10 @@ nav:
           - Broker types:
             - Available Broker types: eventing/brokers/broker-types/README.md
             # add default IMC broker page, page explaining broker types
+            - Multi-tenant channel based Broker: eventing/brokers/broker-types/mt-channel-based-broker/README.md
             - Apache Kafka: eventing/brokers/broker-types/kafka-broker/README.md
             - RabbitMQ Broker: eventing/brokers/broker-types/rabbitmq-broker/README.md
-          - Creating a Broker: eventing/brokers/create-mtbroker.md
+          - Creating a Broker: eventing/brokers/create-broker.md
           - Administrator configuration options: eventing/brokers/broker-admin-config-options.md
           - Developer configuration options: eventing/brokers/broker-developer-config-options.md
         - Triggers:
