Move broker admin configuration page to Eventing > Administrator topics > Eventing configuration

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -188,7 +188,6 @@ nav:
             - Apache Kafka: eventing/brokers/broker-types/kafka-broker/README.md
             - RabbitMQ Broker: eventing/brokers/broker-types/rabbitmq-broker/README.md
           - Creating a Broker: eventing/brokers/create-broker.md
-          - Administrator configuration options: eventing/brokers/broker-admin-config-options.md
           - Developer configuration options: eventing/brokers/broker-developer-config-options.md
         - Triggers:
           - Using Triggers: eventing/triggers/README.md
@@ -252,6 +251,7 @@ nav:
       - Administrator topics:
         # Eventing config
         - Eventing configuration:
+          - Configure Broker defaults: eventing/configuration/broker-configuration.md
           - Configure Channel defaults: eventing/configuration/channel-configuration.md
           - Configure Apache Kafka Channel defaults: eventing/configuration/kafka-channel-configuration.md
           - Configure event source defaults: eventing/configuration/sources-configuration.md
