Add documentation for MTChannelBasedBroker (#5501)
* Add documentation for MTChannelBasedBroker

* Some more cleanup on MTCBB doc

* Change order of delivery options config and broker class config

* Fix line intent issue

Signed-off-by: Christoph Stäbler <cstabler@redhat.com>

* Add a section in "create broker" about the broker class

* Add dot at end of developer documentation

* Cleanup duplication in broker class section

* Update docs/eventing/brokers/create-broker.md

Co-authored-by: Ali Ok <aliok@redhat.com>

* Remove unneeded label

* Update docs/eventing/brokers/broker-types/mt-channel-based-broker/README.md

Co-authored-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

* Address some review comments

* Apply suggestions from code review

Co-authored-by: Ashleigh Brennan <abrennan@redhat.com>

* Move broker admin configuration page to Eventing > Administrator topics > Eventing configuration

* Use "Broker class" consistently

* Add more information about configurations of different Broker classes

* Add more information about native implementations vs MTCBB

* Move channel installation instructions to Prerequisites section.

* Capitalize consistently as per docs style guide

* Update docs/eventing/brokers/create-broker.md

* Rename "Multi tenant channel-based-broker" to "Channel based Broker"

* Fix some capitalizations

---------

Signed-off-by: Christoph Stäbler <cstabler@redhat.com>
Co-authored-by: Ali Ok <aliok@redhat.com>
Co-authored-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>
Co-authored-by: Ashleigh Brennan <abrennan@redhat.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -184,10 +184,10 @@ nav:
           - Broker types:
             - Available Broker types: eventing/brokers/broker-types/README.md
             # add default IMC broker page, page explaining broker types
+            - Channel based Broker: eventing/brokers/broker-types/channel-based-broker/README.md
             - Apache Kafka: eventing/brokers/broker-types/kafka-broker/README.md
             - RabbitMQ Broker: eventing/brokers/broker-types/rabbitmq-broker/README.md
-          - Creating a Broker: eventing/brokers/create-mtbroker.md
-          - Administrator configuration options: eventing/brokers/broker-admin-config-options.md
+          - Creating a Broker: eventing/brokers/create-broker.md
           - Developer configuration options: eventing/brokers/broker-developer-config-options.md
         - Triggers:
           - Using Triggers: eventing/triggers/README.md
@@ -251,6 +251,7 @@ nav:
       - Administrator topics:
         # Eventing config
         - Eventing configuration:
+          - Configure Broker defaults: eventing/configuration/broker-configuration.md
           - Configure Channel defaults: eventing/configuration/channel-configuration.md
           - Configure Apache Kafka Channel defaults: eventing/configuration/kafka-channel-configuration.md
           - Configure event source defaults: eventing/configuration/sources-configuration.md
