--- a/config/nav.yml
+++ b/config/nav.yml
@@ -171,6 +171,7 @@ nav:
         - Debugging application issues: serving/troubleshooting/debugging-application-issues.md
     # Serving reference docs
       - Reference:
+        - Request Flow: serving/reference/request-flow.md
         - Serving API: serving/reference/serving-api.md
 ###############################################################################
     # Eventing
