--- a/code-samples/serving/hello-world/helloworld-go/Dockerfile
+++ b/code-samples/serving/hello-world/helloworld-go/Dockerfile
@@ -1,6 +1,9 @@
 # Use the official Golang image to create a build artifact.
 # This is based on Debian and sets the GOPATH to /go.
-FROM golang:1.13 as builder
+FROM golang:latest as builder
+
+ARG TARGETOS
+ARG TARGETARCH
 
 # Create and change to the app directory.
 WORKDIR /app
@@ -15,7 +18,7 @@ COPY . ./
 
 # Build the binary.
 # -mod=readonly ensures immutable go.mod and go.sum in container builds.
-RUN CGO_ENABLED=0 GOOS=linux go build -mod=readonly -v -o server
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -mod=readonly -v -o server
 
 # Use the official Alpine image for a lean production container.
 # https://hub.docker.com/_/alpine
