--- a/docs/serving/autoscaling/autoscale-go/Dockerfile
+++ b/docs/serving/autoscaling/autoscale-go/Dockerfile
@@ -14,10 +14,14 @@
 
 FROM golang AS builder
 
+ARG TARGETOS
+ARG TARGETARCH
+
 WORKDIR /go/src/app
 COPY . /go/src/app
-RUN CGO_ENABLED=0 go build -o /bin/autoscale-go .
-RUN CGO_ENABLED=0 go build -o /bin/load-generator ./test
+
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -o /bin/autoscale-go .
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -o /bin/load-generator ./test
 
 FROM gcr.io/distroless/base
 EXPOSE 8080
