--- a/.github/workflows/knative-docs-image.yaml
+++ b/.github/workflows/knative-docs-image.yaml
@@ -7,6 +7,7 @@ on:
     - "code-samples/serving/hello-world/helloworld-go/**"
     - "docs/serving/autoscaling/autoscale-go/**"
     - "hack/docker/**"
+    - ".github/workflows/knative-docs-image.yaml"
 
 jobs:
   build-and-push-image:
