Add Knative Serving architecture page (#5545)
* Add Knative Serving architecture page

* Reorder and cross-link architecture and request-flow pages

* Review feedback

* Update docs/serving/architecture.md

Co-authored-by: Evan Anderson <evan.k.anderson@gmail.com>

* Update docs/serving/architecture.md

Co-authored-by: Evan Anderson <evan.k.anderson@gmail.com>

* Review updates

* Review updates

---------

Co-authored-by: Evan Anderson <evan.k.anderson@gmail.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -95,7 +95,10 @@ nav:
     # Serving
 ###############################################################################
     - Serving:
-      - Knative Serving overview: serving/README.md
+      - Knative Serving:
+        - Overview: serving/README.md
+        - Architecture: serving/architecture.md
+        - Request Flow: serving/request-flow.md
       - Resources:
         - Revisions:
           - About Revisions: serving/revisions/README.md
@@ -173,7 +176,6 @@ nav:
         - Debugging application issues: serving/troubleshooting/debugging-application-issues.md
     # Serving reference docs
       - Reference:
-        - Request Flow: serving/reference/request-flow.md
         - Serving API: serving/reference/serving-api.md
 ###############################################################################
     # Eventing
