Add details for storage and knative services (#5605)
* add details for storage and knative services

* fixes

* Update storage.md

add missing whitespace

---------

Co-authored-by: Reto Lehmann <retocode@icloud.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -131,6 +131,7 @@ nav:
           # TODO: Add security section to docs?
           - Configure resource requests and limits: serving/services/configure-requests-limits-services.md
           - HTTPS redirection: serving/services/http-protocol.md
+          - Volume Support: serving/services/storage.md
         - Traffic management: serving/traffic-management.md
         - Configuring gradual rollout of traffic to Revisions: serving/rolling-out-latest-revision.md
         - Tag resolution: serving/tag-resolution.md
