Add blogpost and report for fuzzing audit
Signed-off-by: AdamKorcz <adam@adalogics.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -82,6 +82,7 @@ nav:
           - steering/2020-01-annual-report-2019.md
           - steering/2019-12-updates.md
       - Events:
+          - events/fuzzing-audit-2023.md
           - events/knative-projectmeeting-kubecon-eu-2023.md
           - events/google-summer-of-code-2023.md
           - events/virtual-office-hour-12-2022.md
